# FUSS

./: .gitmodules  AUTHORS.md  CITATION.cff  CMakeLists.txt  README.md  install.sh  mkdocs.yml
.github/workflows/: docs.yml
cmake/: FUSSConfig.cmake.in  SetFortranFlags.cmake
docs/: index.md  overview.md
docs/about/: acknowledgements.md  index.md  license.md
docs/development/: contributing.md  index.md  performance_notes.md  structure.md  testing.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
docs/theory/: governing-equations.md  index.md  numerics.md  thermo.md  time-integration.md
docs/user/: boundary-conditions.md  index.md  initial-conditions.md  input.md  registry.md  using.md
docs/vv/: 1D-steady-state-radiative-rod.md  1D-transient-oscillating-rod.md  2D-steady-state-convective-plate.md  2D-steady-state-qvol-plate.md  2D-steady-state-temperature-plate.md  2D-transient-multimat-plate.md  index.md  residual-convergence.md  time-convergence.md
src/app/: CMakeLists.txt  docgen.f90  main.f90
src/lib/: CMakeLists.txt
src/lib/base/: Advanced_Types_m.f90  Base_Types_m.f90  Global_m.f90  Parameters_m.f90  Series_Data_m.f90
src/lib/config/: Assign_Setup.f90  Backend_INI.f90  Config_Types_m.f90  Read_Ini.f90  Register_IO.f90  Register_Numerics.f90  Register_Sim_Param.f90  Registry.f90
src/lib/diagnostic/: Mod_Diagnostic.f90
src/lib/driver/: Mod_Allocate_Data.f90  Procedures_m.f90  Wrap_Postprocess.f90  Wrap_Setup.f90  Wrap_Solve.f90
src/lib/io/: IO_BC.f90  IO_Probes.f90  IO_Solution.f90  IO_Wall.f90  Load_Table.f90
src/lib/numerics/fluxes/: Lib_Diffusive.f90  Mod_Fluxes.f90
src/lib/numerics/fluxes/bc/: Lib_BC_Fluxes.f90  Lib_BC_Fluxes_Connection.f90  Lib_BC_Fluxes_Symmetry.f90  Lib_BC_Fluxes_Wall_Heat.f90  Lib_BC_Fluxes_Wall_HeatTransfer.f90  Lib_BC_Fluxes_Wall_Radiation.f90  Lib_BC_Fluxes_Wall_RadiationConvection.f90  Lib_BC_Fluxes_Wall_Temperature.f90  Mod_BC_Fluxes.f90
src/lib/numerics/multigrid/: Lib_Multigrid.f90  Mod_Multigrid.f90
src/lib/numerics/space/: Lib_Ghost.f90  Lib_Metrics.f90  Mod_Metrics.f90
src/lib/numerics/time/: Mod_dt.f90
src/lib/numerics/time/explicit/: Lib_IRS.f90  Lib_Newstate.f90  Lib_RK.f90  Mod_Explicit.f90  Mod_Newstate.f90
src/lib/parallel/: Mod_GhostExchange.f90  Mod_MPI.f90
src/lib/physics/: Lib_Solid.f90
test/numerics-features/chimera/: input.ini
test/numerics-features/chimera/INPUT/: bc.txt  ic.tec
test/numerics-features/chimera/MESH/: mesh.tec
test/numerics-features/chimera/SOLUTION/: couples.txt  field.tec  points.txt  volumes.txt  wall.tec
test/numerics-features/residual_convergence/: verify.py
test/numerics-features/residual_convergence/irs/: FUSS.sh  input.ini
test/numerics-features/residual_convergence/mg1/: input.ini
test/numerics-features/residual_convergence/mg2/: input.ini
test/numerics-features/residual_convergence/mg3/: input.ini
test/numerics-features/residual_convergence/mg_irs/: input.ini
test/numerics-features/residual_convergence/nominal/: input.ini
test/numerics-features/time_convergence/: verify.py
test/numerics-features/time_convergence/SOLUTION/: MPI-2x10  MPI-2x20  MPI-2x5  MPI-4x10  MPI-4x5  openMP-10  openMP-20  openMP-40
test/numerics-features/time_convergence/simdir/: input.ini
test/steady-state/convective_Plate/: input.ini  verify.py
test/steady-state/convective_Plate/INPUT/: bc.txt  ic.tec
test/steady-state/convective_Plate/MESH/: mesh.tec
test/steady-state/convective_Plate/SOLUTION/: field.tec  wall.tec
test/steady-state/qvol_Plate/: input.ini  verify.py
test/steady-state/qvol_Plate/INPUT/: bc.txt  st.tec
test/steady-state/qvol_Plate/MESH/: mesh.tec
test/steady-state/qvol_Plate/SOLUTION/: field.tec  wall.tec
test/steady-state/radiative_Rod/: input.ini  verify.py
test/steady-state/radiative_Rod/INPUT/: bc.txt  ic.tec
test/steady-state/radiative_Rod/MESH/: mesh.tec
test/steady-state/radiative_Rod/SOLUTION/: field.tec  wall.tec
test/steady-state/temperature_Plate/: input.ini  verify.py
test/steady-state/temperature_Plate/INPUT/: bc.txt  ic.tec
test/steady-state/temperature_Plate/SOLUTION/: field.tec  wall.tec
test/transient/multimat_Plate/: input.ini  verify.py
test/transient/multimat_Plate/INPUT/: bc.txt  ic.tec  phase.txt
test/transient/multimat_Plate/MESH/: mesh.tec
test/transient/oscillating_Rod/: FUSS.sh  bc_time.py  input.ini  verify.py
(+16 files in other folders)
